--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,34 @@
 {
   "name": "health-app",
-  "module": "index.ts",
   "type": "module",
   "private": true,
-  "devDependencies": {
-    "@types/bun": "latest"
+  "scripts": {
+    "dev": "bun run --watch src/index.ts",
+    "start": "bun run src/index.ts"
   },
-  "peerDependencies": {
+  "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.8.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.1.3",
+    "multer": "^2.0.2",
+    "resend": "^6.7.0",
+    "square": "^43.2.1",
+    "streamifier": "^0.1.1",
+    "winston": "^3.19.0",
+    "winston-daily-rotate-file": "^5.0.0",
+    "zod": "^4.3.5"
+  },
+  "devDependencies": {
+    "@types/bun": "latest",
+    "@types/express": "^4",
+    "@types/cors": "^2",
+    "@types/jsonwebtoken": "^9",
+    "@types/multer": "^1",
     "typescript": "^5"
   }
 }
